fix: link and spacing

--- a/src/dashboard/components/large-banner/large-banner.scss
+++ b/src/dashboard/components/large-banner/large-banner.scss
@@ -53,6 +53,7 @@
 	.kb-large-banner__secondary-link {
 		display: inline-block;
 		margin-top: 12px;
+		margin-left: 16px;
 		color: rgba(255, 255, 255, 0.75);
 		font-size: 14px;
 		text-decoration: underline;
